--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -3,6 +3,8 @@
 }
 
 .titulo{
+    background-color: black;
+    color: white;
     text-align: center;
     margin-top: 100px;
     display: inline-block;
