--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -8,6 +8,10 @@
     margin-top: 100px;
     display: block;
 }
+.wapp{
+    display: flex;
+    position: fixed;
+}
 footer{
     display: block;
     text-align: center;
